sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:2: error: Missing closing brace `}' assumed here
var isOver : Boolean = true
^AlgBubbleSort3:2: error: expected class or object definition
var isOver : Boolean = true
^AlgBubbleSort3:3: error: expected class or object definition
def bubbleSort3() {
^AlgBubbleSort3:13: error: Missing closing brace `}' assumed here
  } 
  ^